--- a/src/main/resources/static/web/pages/manager.html
+++ b/src/main/resources/static/web/pages/manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Manager</title>
 </head>
 <body class="bg-neutral-200">
     <header></header>
@@ -26,7 +26,7 @@
            <button class="bg-sky-500 w-[100px] rounded-md py-1 " @click="createClient">Add Client</button>
             <div class="pt-4 w-1/2">
                 <h2 class="text-2xl font-semibold pb-3" >Client list</h2>
-            <table  class="w-[450px] border rounded-lg text-left">
+            <table  class="w-[450px] border rounded-lg text-left overflow-x-auto">
                 <thead>
                     <tr>
                         <th>First Name</th>
@@ -35,11 +35,11 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <template v-if="clients.length > 0" v-for="client in clients">
+                    <template v-if="data.length > 0" v-for="client in data">
                     <tr class="border-t-2 border-b-0 bg-slate-300">
-                        <td >{{client.firstName}}</td>
-                        <td>{{client.lastName}}</td>
-                        <td>{{client.email}}</td>
+                        <td >{{data.firstName}}</td>
+                        <td>{{data.lastName}}</td>
+                        <td>{{data.email}}</td>
                     </tr>
                 </template>
                 </tbody>
@@ -55,9 +55,9 @@
 </main>
 <footer>Cohort 52</footer>
     </div>
-    <script type="module" src="./tailwind.config.js"></script>
+    <script type="module" src="../pagesJs/tailwind.config.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./manager.js"></script> 
+    <script src="../pagesJs/manager.js"></script> 
 </body>
 </html>
