--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -28,25 +28,26 @@
         <div id="Banner" class="hidden lg:flex relative " >
             <img class="h-[360px] w-full object-top object-cover" src="../images/banner.jpg" alt="banner" id="bannerImg">
         </div>
-        <div class="flex flex-col pl-2 gap-8 md:flex-row md:justify-center md:pt-10 md:gap-28">
+        <div class="flex flex-col pl-2 gap-8 md:flex-row md:justify-center md:pt-10 md:pb-4 md:gap-28">
         <template v-if="accounts.length > 0" v-for="account in accounts">
         <article class="flex flex-col bg-caf-noir text-white px-2 w-[300px] h-[180px] gap-4 rounded-md">
             <h2 class="text-lg font-semibold">Account Number: {{account.number}}</h2>
             <h2 class="text-lg font-semibold">Amount:</h2>
             <p  class="text-xl font-semibold">{{formatBudget(account.balance)}}</p>
-            <h2 class="text-lg font-semibold">Creation Date: {{account.creationDate}}</h2>
+            <h2 class="text-lg font-semibold">Creation Date: {{account.creationDate}}</h2>   
+            <a class="text-lg text-center font-semibold bg-caf-noir h-7 mt-5 rounded-md w-[200px]" :href="'account.html?id='+account.id">view my transactions</a>
         </article>
         </template>
     </div>
     </main>
-    <footer class="bg-rosewood">
+    <footer class="bg-rosewood pt-5">
         <h2 class="text-center text-2xl">All rights reserved</h2>
     </footer>
     <script type="module" src="../pagesJs/tailwind.config.extension.js"></script>
     <script type="module" src="../pagesJs/tailwind.config.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../pagesJs/account.js"></script>
+    <script src="../pagesJs/accounts.js"></script>
 
 </body>
 
