--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -10,38 +10,62 @@
 </head>
 
 <body>
-    <header class="w-full bg-rosewood md:flex flex-row justify-between px-2">
+    <header class="w-full bg-green-f md:flex flex-row justify-between px-2">
         <div class="pb-2 ">
           <img class="w-20 h-20 rounded-xl" src="../images/favicon.png" alt="logo">
           <h2 class="text-lg text-white">UNITY BANK</h2>
         </div>
         <div class="flex flex-col justify-between items-center pb-3 font-semibold md:flex-row md:gap-24">
-            <a class=" hover:bg-caf-noir rounded-md py-1 text-white text-xl px-1 " href="http://localhost:8080/web/pages/accounts.html">Accounts</a>
-            <a class="hover:bg-caf-noir rounded-md py-1 text-white text-xl px-1 "href="#">Cards</a>
-            <a class="hover:bg-caf-noir rounded-md py-1 text-white text-xl px-1 " href="#">Loans</a>
-            <a class=" hover:bg-caf-noir rounded-md py-1 text-white text-xl px-1 " href="#">Transactions</a>
+            <a class="hover:bg-black-eerie rounded-xl py-1 text-white text-xl px-3 " href="http://localhost:8080/web/pages/accounts.html">Accounts</a>
+            <a class="hover:bg-black-eerie rounded-xl py-1 text-white text-xl px-3 "href="#">Cards</a>
+            <a class="hover:bg-black-eerie rounded-xl py-1 text-white text-xl px-3 " href="#">Loans</a>
+            <a class="hover:bg-black-eerie rounded-xl py-1 text-white text-xl px-3 " href="#">Transactions</a>
         </div>
         <a class="flex justify-start items-center h-24" href=""><img class="w-10 h-10" src="../images/cerrar sesion.png" alt="cerrar sesion"></a>
     </header>
-    <main id="app" class="bg-silver min-h-screen flex flex-col pt-2 pb-10">
+    <main id="app" class="bg-nyanza min-h-screen flex flex-col pt-2 pb-10">
         <h1 class="w-full text-4xl font-semibold pt-10 pb-3 md:pl-28">Welcome,{{data.firstName}}!</h1>
         <div id="Banner" class="hidden lg:flex relative " >
-            <img class="h-[360px] w-full object-top object-cover" src="../images/banner.jpg" alt="banner" id="bannerImg">
+            <img class="h-[350px] w-full object-top object-cover" src="../images/banner.jpg" alt="banner" id="bannerImg">
         </div>
-        <div class="flex flex-col pl-2 gap-8 md:flex-row md:justify-center md:pt-10 md:pb-4 md:gap-28">
+        <div class="flex flex-col pl-2 gap-8 md:flex-row md:justify-center md:pt-10 md:pb-8 md:gap-28">
         <template v-if="accounts.length > 0" v-for="account in accounts">
-        <article class="flex flex-col bg-caf-noir text-white px-2 w-[300px] h-[180px] gap-4 rounded-md">
-            <h2 class="text-lg font-semibold">Account Number: {{account.number}}</h2>
-            <h2 class="text-lg font-semibold">Amount:</h2>
-            <p  class="text-xl font-semibold">{{formatBudget(account.balance)}}</p>
-            <h2 class="text-lg font-semibold">Creation Date: {{account.creationDate}}</h2>   
-            <a class="text-lg text-center font-semibold bg-caf-noir h-7 mt-5 rounded-md w-[200px]" :href="'account.html?id='+account.id">view my transactions</a>
+        <article class="flex flex-col items-center bg-black-eerie  px-2 w-[300px] h-[180px] gap-4 rounded-md">
+            <h2 class="text-lg text-white font-semibold pt-2">Account Number: {{account.number}}</h2>
+            <h2 class="text-lg text-white font-semibold">Amount:</h2>
+            <p  class="text-xl text-white font-semibold">{{formatBudget(account.balance)}}</p>
+            <h2 class="text-lg text-white font-semibold">Creation Date: {{account.creationDate}}</h2> 
+            <a class="text-lg text-white text-center font-semibold bg-black-eerie h-7 mt-5 rounded-xl w-[180px] pb-2" :href="'account.html?id='+account.id">my transactions</a>  
         </article>
         </template>
     </div>
+    <div class="flex flex-col justify-center items-center pt-6" v-if="loans.length > 0">
+        <h2 class="w-full text-4xl font-semibold pt-10 pb-3 md:pl-28">Your Loans</h2>
+        <table class="w-[300px] text-xs md:w-[480px] border text-white md:text-lg bg-black-eerie text-left overflow-x-auto">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Amount</th>
+                    <th>Payments</th>
+                </tr>
+            </thead>
+            <tbody>
+                <template v-for="loan in loans">
+                <tr class="border-t-2 border-b-0 ">
+                    <td>{{loan.name}}</td>
+                    <td>{{formatBudget(loan.amount)}}</td>
+                    <td>{{loan.payments}}</td>
+                </tr>
+            </template>
+            </tbody>
+        </table>
+    </div>
+    <div class="flex flex-col justify-center items-center pt-6" v-else>
+        <h2 class="w-full text-4xl font-semibold pt-10 pb-3 md:pl-28">Does Not Have Current Loans</h2>
+    </div>
     </main>
-    <footer class="bg-rosewood pt-5">
-        <h2 class="text-center text-2xl">All rights reserved</h2>
+    <footer class="bg-green-f pt-5">
+        <h2 class="text-center text-2xl text-white">All rights reserved</h2>
     </footer>
     <script type="module" src="../pagesJs/tailwind.config.extension.js"></script>
     <script type="module" src="../pagesJs/tailwind.config.js"></script>
