--- a/src/main/resources/static/web/pages/account.html
+++ b/src/main/resources/static/web/pages/account.html
@@ -11,63 +11,69 @@
 </head>
 
 <body class=" flex flex-col">
-    <header class="w-full">
-        <div class="pb-2 flex flex-row items-center">
-            <img class="w-12 h-12 rounded-md" src="../images/favicon.png" alt="logo">
-            <h2 class="text-lg text-center pl-3 ">UNITY BANK</h2>
-          </div>
-        <ul class="nav-list pt-2 ">
-            <li><a href="http://localhost:8080/web/pages/accounts.html" class=" text-neutral-500 text-lg">Accounts</a></li>
-            <li><a href="http://localhost:8080/web/pages/cards.html" class=" text-neutral-500 text-lg" >Cards</a></li>
-            <li><a href="" class="text-neutral-500 text-lg">Loans</a></li>
-            <li><a href="" class="active text-lg">Transactions</a></li>
-        </ul>
-        <a href=""  v-on:click="logout()" class="px-6 pt-2" ><img class="w-10 h-10" 
-            src="../images/cerrar sesion.png" alt="cerrar sesion"></a>
-    </header>
-    <main id="app" class=" min-h-screen flex flex-col pt-10 pb-10 h-1/2">
-        <div id="Banner" class="hidden lg:flex relative " >
-            <img class="h-[360px] w-full object-top object-cover mt-6" src="../images/banner 2-arbolito.jpg" alt="banner" id="bannerImg">
-        </div>
-        <h1 class="w-full text-3xl text-center font-semibold pt-10 pb-3 ">Your account select, {{data.firstName}}</h1>
-        <div class="flex flex-col justify-around md:flex-row">
-        <div class="flex flex-col w-1/2 pl-2  md:flex-row md:justify-center md:pt-10">
-            <article class="flex flex-col border border-black items-center px-2 w-[300px] h-[180px] gap-4 rounded-md">
-                <h2 class="text-lg font-semibold pt-2">Account Number: {{account.number}}</h2>
-                <h2 class="text-lg font-semibold">Amount:</h2>
-                <p  class="text-xl font-semibold">{{formatBudget(account.balance)}}</p>
-                <h2 class="text-lg font-semibold">Creation Date: {{account.creationDate}}</h2>
-            </article>
-        </div>
-        <div class="flex flex-col w-1/2 justify-center items-center">
-            <h2 class="w-full text-2xl  font-medium  pb-3 md:pl-28">Transactions Resume</h2>
-            <table class="w-[300px] text-xs md:w-[600px] border md:text-lg text-left overflow-x-auto">
-                <thead>
-                    <tr class="bg-orange-100">
-                        <th>Type</th>
-                        <th>Amount</th>
-                        <th>Data</th>
-                        <th>Description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <template v-if="transactions.length > 0" v-for="transaction in transactions">
-                    <tr class="border-t-2 border-b-0 bg-orange-200">
-                        <td v-if="transaction.type === 'CREDIT'" class="text-green-800 font-semibold">{{transaction.type}}</td>
-                        <td v-else class="text-red-700 font-semibold">{{transaction.type}}</td>
-                        <td>{{formatBudget(transaction.amount)}}</td>
-                        <td>{{transaction.date}}</td>
-                        <td>{{transaction.description}}</td>
-                    </tr>
-                </template>
-                </tbody>
-            </table>
-        </div>
+    <div id="app">
+        <header class="w-full">
+            <div class="pb-2 flex flex-row items-center">
+                <img class="w-12 h-12 rounded-md" src="../images/favicon.png" alt="logo">
+                <h2 class="text-lg text-center pl-3 ">UNITY BANK</h2>
+            </div>
+            <ul class="nav-list pt-2 ">
+                <li><a href="http://localhost:8080/web/pages/accounts.html" class=" text-neutral-500 text-lg">Accounts</a>
+                </li>
+                <li><a href="http://localhost:8080/web/pages/cards.html" class=" text-neutral-500 text-lg">Cards</a></li>
+                <li><a href="" class="text-neutral-500 text-lg">Loans</a></li>
+                <li><a href="" class="active text-lg">Transactions</a></li>
+            </ul>
+            <a href="" v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
+                    alt="cerrar sesion"></a>
+        </header>
+        <main id="app" class=" min-h-screen flex flex-col pt-10 pb-10 h-1/2">
+            <div id="Banner" class="hidden lg:flex relative ">
+                <img class="h-[360px] w-full object-top object-cover mt-6" src="../images/banner 2-arbolito.jpg"
+                    alt="banner" id="bannerImg">
+            </div>
+            <h1 class="w-full text-3xl text-center font-semibold pt-10 pb-3 ">Your account select, {{data.firstName}}</h1>
+            <div class="flex flex-col justify-around md:flex-row">
+                <div class="flex flex-col w-1/2 pl-2  md:flex-row md:justify-center md:pt-10">
+                    <article
+                        class="flex flex-col border border-black items-center px-2 w-[300px] h-[180px] gap-4 rounded-md">
+                        <h2 class="text-lg font-semibold pt-2">Account Number: {{account.number}}</h2>
+                        <h2 class="text-lg font-semibold">Amount:</h2>
+                        <p class="text-xl font-semibold">{{formatBudget(account.balance)}}</p>
+                        <h2 class="text-lg font-semibold">Creation Date: {{account.creationDate}}</h2>
+                    </article>
+                </div>
+                <div class="flex flex-col w-1/2 justify-center items-center">
+                    <h2 class="w-full text-2xl  font-medium  pb-3 md:pl-28">Transactions Resume</h2>
+                    <table class="w-[300px] text-xs md:w-[600px] border md:text-lg text-left overflow-x-auto">
+                        <thead>
+                            <tr class="bg-orange-100">
+                                <th>Type</th>
+                                <th>Amount</th>
+                                <th>Data</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <template v-if="transactions.length > 0" v-for="transaction in transactions">
+                                <tr class="border-t-2 border-b-0 bg-orange-200">
+                                    <td v-if="transaction.type === 'CREDIT'" class="text-green-800 font-semibold">
+                                        {{transaction.type}}</td>
+                                    <td v-else class="text-red-700 font-semibold">{{transaction.type}}</td>
+                                    <td>{{formatBudget(transaction.amount)}}</td>
+                                    <td>{{transaction.date}}</td>
+                                    <td>{{transaction.description}}</td>
+                                </tr>
+                            </template>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <h2 class="text-center  text-2xl">All rights reserved</h2>
+        </footer>
     </div>
-    </main>
-    <footer >
-        <h2 class="text-center  text-2xl">All rights reserved</h2>
-    </footer>
     <script type="module" src="../pagesJs/tailwind.config.extension.js"></script>
     <script type="module" src="../pagesJs/tailwind.config.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
