sprint 8 terminado, solo falta el alert de transferecia exitosa

--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -21,7 +21,7 @@
                 <li><a href="#" class=" active text-lg">Accounts</a></li>
                 <li><a href="http://localhost:8080/web/pages/cards.html" class="text-lg">Cards</a></li>
                 <li><a href="" class="text-lg">Loans</a></li>
-                <li><a href="" class="text-lg">Transactions</a></li>
+                <li><a href="http://localhost:8080/web/pages/transfers.html" class="text-lg">Transactions</a></li>
             </ul>
             <a href="" v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
                     alt="cerrar sesion"></a>
