--- a/src/main/resources/static/web/pages/account.html
+++ b/src/main/resources/static/web/pages/account.html
@@ -24,7 +24,7 @@
                 <li><a href="http://localhost:8080/web/pages/cards.html" class=" text-neutral-500 text-lg">Cards</a>
                 </li>
                 <li><a href="" class="text-neutral-500 text-lg">Loans</a></li>
-                <li><a href="" class="active text-lg">Transactions</a></li>
+                <li><a href="http://localhost:8080/web/pages/transfers.html" class=" text-lg">Transactions</a></li>
             </ul>
             <a href="" v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
                     alt="cerrar sesion"></a>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="flex flex-col w-1/2 justify-center items-center">
                     <h2 class="w-full text-2xl  font-medium  pb-3 md:pl-28">Transactions Resume</h2>
-                    <table class="w-[300px] text-xs md:w-[600px] border md:text-lg text-left overflow-x-auto">
+                    <table class="w-[300px] text-xs md:w-[660px] border md:text-lg text-left overflow-x-auto">
                         <thead>
                             <tr class="bg-orange-100">
                                 <th>Type</th>
