--- a/src/main/resources/static/web/pages/cardCreate.html
+++ b/src/main/resources/static/web/pages/cardCreate.html
@@ -26,7 +26,7 @@
         </header>
         <main class=" min-h-screen flex justify-center items-center">
             <div
-                class="flex justify-center items-center w-[450px] h-[350px] flex-col gap-4 bg-gradient-to-t from-orange-700 to-orange-500 p-4 rounded-lg">
+                class="flex justify-center items-center w-[450px] h-[350px] flex-col gap-4 bg-grahidient-to-t from-orange-700 to-orange-500 p-4 rounded-lg">
                 <form class="flex gap-4 flex-col text-lg text-white">
                     <div>
                         <label>Choose color</label>
