--- a/src/main/resources/static/web/pages/account.html
+++ b/src/main/resources/static/web/pages/account.html
@@ -23,7 +23,7 @@
                 </li>
                 <li><a href="http://localhost:8080/web/pages/cards.html" class=" text-neutral-500 text-lg">Cards</a>
                 </li>
-                <li><a href="" class="text-neutral-500 text-lg">Loans</a></li>
+                <li><a href="http://localhost:8080/web/pages/loan-application.html" class="text-neutral-500 text-lg">Loans</a></li>
                 <li><a href="http://localhost:8080/web/pages/transfers.html" class=" text-lg">Transactions</a></li>
             </ul>
             <a href="" v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
