--- a/src/main/resources/static/web/pages/cardCreate.html
+++ b/src/main/resources/static/web/pages/cardCreate.html
@@ -18,7 +18,7 @@
             <ul class="nav-list pt-2 ">
                 <li><a href="http://localhost:8080/web/pages/accounts.html" class=" text-lg">Accounts</a></li>
                 <li><a href="#" class="active text-lg">Cards</a></li>
-                <li><a href="" class="text-lg">Loans</a></li>
+                <li><a href="http://localhost:8080/web/pages/loan-application.html" class="text-lg">Loans</a></li>
                 <li><a href="http://localhost:8080/web/pages/transfers.html" class="text-lg">Transactions</a></li>
             </ul>
             <button v-on:click="logout()" class="px-6 pt-2"><img class="w-10 h-10" src="../images/cerrar sesion.png"
